Don't use date in header to ensure reproducible builds.

--- a/docs/src/Master_Documentation.adoc
+++ b/docs/src/Master_Documentation.adoc
@@ -1,11 +1,10 @@
 :lang: en
 :lversion: {sys: cat ../VERSION}
-:date: {sys: LANG=C date --date="@$(dpkg-parsechangelog --file ../debian/changelog -S timestamp)" '+%d %b %Y'}
 :ascii-ids:
 :masterdir: {indir}
 :revdate: 2021-10-28 
-LinuxCNC V{lversion}, {date}
-============================
+= LinuxCNC V{lversion}
+
 
 :leveloffset: 0
 = Getting Started & Configuration
