--- a/docs/src/Master_Integrator.adoc
+++ b/docs/src/Master_Integrator.adoc
@@ -1,10 +1,9 @@
 :lang: en
 :lversion: {sys: cat ../VERSION}
-:date: {sys: LANG=C date --date="@$(dpkg-parsechangelog --file ../debian/changelog -S timestamp)" '+%d %b %Y'}
 :ascii-ids:
 :masterdir: {indir}
 :revdate: 2021-10-28
-= Integrator Information V{lversion}, {date}
+= Integrator Information V{lversion}
 
 :leveloffset: 1
 
