--- a/docs/src/Master_Getting_Started.adoc
+++ b/docs/src/Master_Getting_Started.adoc
@@ -1,10 +1,9 @@
 :lang: en
 :lversion: {sys: cat ../VERSION}
-:date: {sys: LANG=C date --date="@$(dpkg-parsechangelog --file ../debian/changelog -S timestamp)" '+%d %b %Y'}
 :ascii-ids:
 :masterdir: {indir}
 :revdate: 2021-10-28
-= Getting Started V{lversion}, {date}
+= Getting Started V{lversion}
 
 The LinuxCNC Team
 
