--- a/docs/src/man/man9/opto_ac5.9.adoc
+++ b/docs/src/man/man9/opto_ac5.9.adoc
@@ -19,8 +19,12 @@ HAL pin 1, header connector pin 45 and so on, until bit 24 would be HAL
 pin 23, header connector pin 1. "1" bits represent output points. So
 channel 0..11 as inputs and 12..23 as outputs would be represented by
 (in binary) 111111111111000000000000 which is 0xfff000 in hexadecimal.
-That is the number you would use, e.g.,
-`loadrt opto_ac5 portconfig0=0xfff000`.
+That is the number you would use, e.g.
+
+[source,hal]
+----
+loadrt opto_ac5 portconfig0=0xfff000
+----
 
 If no portconfig variable is specified the default configuration is 12
 inputs then 12 outputs.
