--- a/docs/src/man/man9/hm2_modbus.9.adoc
+++ b/docs/src/man/man9/hm2_modbus.9.adoc
@@ -142,6 +142,9 @@ Each command in the MBCCB file (not init commands) will generate a set of pins
 to reflect the current state, where `MM` is the command number counting from zero
 (00):
 
+hm2_modbus.N.command.MM.disable (bit, input)::
+  Disable this command on the rising edge of this pin. You need to use the
+  command's corresponding reset pin to re-enable it.
 hm2_modbus.N.command.MM.disabled (bit, output)::
   Set if the command is no longer sent in the commands loop.
 hm2_modbus.N.command.MM.error-code (u32, output)::
@@ -149,6 +152,7 @@ hm2_modbus.N.command.MM.error-code (u32, output)::
 
   ** 5,  0x05 (EIO): The receiver detected an overrun, a false start-bit or wrong parity.
   ** 9,  0x09 (EBADF): The reply returned an unsupported function.
+  ** 11, 0x0b (EAGAIN): The command was manually disabled in the mbccb or via the disable pin.
   ** 22, 0x16 (EINVAL): An invalid value was detected (internal error).
   ** 27, 0x1b (EFBIG): The received data packet size exceeds the internally allocated buffer.
   ** 34, 0x22 (ERANGE): The received data packet was too small or the message's length indicator was wrong.
@@ -166,7 +170,9 @@ hm2_modbus.N.command.MM.errors (u32, output)::
   when the command succeeds.
 hm2_modbus.N.command.MM.reset (bit, input)::
   Reset this command's error counter and re-enable the command on the rising
-  edge of the input pin.
+  edge of the input pin. +
+  Note: Re-enabling the command will honor the 'writeflush' setting of the
+  command.
 
 Each mbccb file will generate a set of pins as defined in the mbccb file. See
 *mesambccc*(1) for details.
