--- a/docs/src/gui/qtvcp-code-snippets.adoc
+++ b/docs/src/gui/qtvcp-code-snippets.adoc
@@ -264,6 +264,9 @@ from qtvcp.core import Qhal
 ----
 
 This is to allow access to *QtVCP's HAL component*.
+<<cha:qtvcp:Qhal,For more info: Qhal>> +
+Qhal's newPin function returns a QPin object.
+<<cha:qtvcp:QPin,For more info: QPin>>
 
 .Instantiate `Qhal` in the `INSTANTIATE LIBRARY SECTION`
 [source,python]
@@ -272,7 +275,7 @@ QHAL = Qhal()
 ----
 
 .Add a function that gets called when the pin state changes
-Under the `initialised__` function, make sure there is an entry similar to this:
+Under the `initialized__` function, make sure there is an entry similar to this:
 
 [source,python]
 ----
@@ -284,8 +287,8 @@ Under the `initialised__` function, make sure there is an entry similar to this:
 # the widgets are instantiated.
 # the HAL pins are built but HAL is not set ready
 def initialized__(self):
-    self.pin_cycle_start_in = QHAL.newpin('cycle-start-in',QHAL.HAL_BIT, QHAL.HAL_IN)
-    self.pin_cycle_start_in.value_changed.connect(lambda s: self.cycleStart(s))
+    self.pin_cycle_start_in = QHAL.newPin('cycle-start-in',QHAL.HAL_BIT, QHAL.HAL_IN)
+    self.pin_cycle_start_in.pinValueChanged.connect(lambda o,s: self.cycleStart(s))
 ----
 
 .Define the function called by pin state change in the `GENERAL FUNCTIONS SECTION`
@@ -312,6 +315,35 @@ that has tabs with the names `tab_auto`, `tab_graphics`, `tab_filemanager` and `
 In this way the cycle start button works differently depending on what tab is shown.
 
 This is simplified - _checking state and error trapping might be helpful_.
+
+== Read/Write System HAL Pins Directly
+Sometimes you need to read a system pin and creating a HAL pin and connecting to it,
+is more work then required. You can read it directly without connecting to it.
+
+Here is how to read a pin, parameter, or signal:
+
+[source,python]
+----
+self.h.hal.get_value('spindle.0.at-speed')
+
+# or use the Qhal library like this:
+QHAL.getValue('spindle.0.at-speed')
+----
+
+Here is how to write to an unconnected pin or a non driven signal:
+
+[source,python]
+----
+self.h.hal.set_p('componentName.pinName','10')
+self.h.hal.set_s('componentName.signalName','10')
+
+# or use the Qhal library like this:
+QHAL.setPin('componentName.pinName', '10')
+QHAL.setSignal('componentName.signalName', '10')
+----
+
+Using 'self.h.hal' or 'QHAL.hal' allows access to the HAL python module functions:
+ <<cha:python-hal-interface, Python HAL Interface>>
 
 == Add A Special Max Velocity Slider Based On Percent
 
