--- a/docs/src/man/man1/halcompile.1.adoc
+++ b/docs/src/man/man1/halcompile.1.adoc
@@ -83,30 +83,29 @@ Extra arguments passed to the linker.
 *halcompile* performs many different functions:
 
 * Compile *.comp* and *.c* files into *.so* or *.ko* HAL realtime
-components (the *--compile* flag)
-* Compile *.comp* and *.c* files into HAL non-realtime components (the
-*--compile --userspace* flag)
+  components (the *--compile* flag)
+* Compile *.comp* and *.c* files into HAL non-realtime components
+  (the *--compile --userspace* flag)
 * Preprocess *.comp* files into *.c* files (the *--preprocess* flag)
 * Extract documentation from *.comp* files into asciidoc or manpage
-section *1* or *9* files (the *--adoc* and *--document* flags)
-* Display documentation from *.comp* files onscreen (the *--view-doc*
-flag)
+  section *1* or *9* files (the *--adoc* and *--document* flags)
+* Display documentation from *.comp* files onscreen (the *--view-doc* flag)
 * Compile and install *.comp* and *.c* files into the proper directory
-for HAL realtime components (the *--install* flag), which may require
-_sudo_ to write to system directories.
+  for HAL realtime components (the *--install* flag),
+  which may require _sudo_ to write to system directories.
 * Install *.c* and *.py* files into the proper directory for HAL
-non-realtime components (the *--install* *--userspace* flag), which may
-require _sudo_ to write to system directories.
+  non-realtime components (the *--install* *--userspace* flag), which may
+  require _sudo_ to write to system directories.
 * Extract documentation from *.comp* files into *.1* or *.9* manpage
-files in the proper system directory (the *--install* flag), which may
-require _sudo_ to write to system directories.
+  files in the proper system directory (the *--install* flag), which may
+  require _sudo_ to write to system directories.
 * Preprocess *.comp* files into *.c* files (the *--preprocess* flag)
 
 == SEE ALSO
 
-_Halcompile HAL Component Generator_ in the LinuxCNC documentation for a
-full description of the *.comp* syntax, along with examples
+* _Halcompile HAL Component Generator_ in the LinuxCNC documentation for a
+  full description of the *.comp* syntax, along with examples
 
-*pydoc, HAL* and _Creating Non-realtime Python Components_ in the
-LinuxCNC documentation for documentation on the Python interface to HAL
-components
+* *pydoc, HAL* and _Creating Non-realtime Python Components_ in the
+  LinuxCNC documentation for documentation on the Python interface to HAL
+  components
